# virtual.reality

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
camera_internals/: detect_pose.py  fisheye_KDxi.py
cameras/: CamRotPy.py
generate_projector_camera_mapping/: mapping_pipeline.py  perspective_checker_with_exp_maps.py
src/virtual_reality/: __init__.py
src/virtual_reality/calibration/: __init__.py  fisheye.py  intrinsics.py  pinhole.py
src/virtual_reality/cameras/: __init__.py  alvium.py  base.py  factory.py  rotpy_driver.py
src/virtual_reality/config/: __init__.py  loader.py  paths.py  schema.py
src/virtual_reality/display/: __init__.py  minimap.py  monitor.py  surface.py  window.py
src/virtual_reality/gui/: __init__.py  app.py
src/virtual_reality/legacy/: 3d_object_fly.py  3d_object_fly2.py  3d_object_fly3.py  3d_object_fly4.py  __init__.py  check_scaling_accuracy.py  (+19 more)
stimulus/: warp_image.py  warp_moving_circle_fish.py
tests/: conftest.py
tests/test_calibration/: test_fisheye.py  test_intrinsics.py
tests/test_cameras/: test_camera_interface.py
tests/test_config/: test_loader.py  test_paths.py  test_schema.py
tests/test_display/: test_minimap.py  test_monitor.py
tests/test_mapping/: test_pipeline.py  test_refinement.py  test_structured_light.py  test_warp.py
tests/test_math_utils/: test_arena.py  test_geometry.py  test_transforms.py
tests/test_pipeline/: test_calibration_pipeline.py
tests/test_rendering/: test_glb_loader.py  test_projections.py  test_shaders.py
tests/test_stimulus/: test_base.py  test_controllers.py  test_stimulus_classes.py
(+35 files in other folders)
